syntax = "proto3";
package raft;

option go_package = "github.com/tashima42/keyval";

import "protos/keyval.proto";

service Raft {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote(RequestVoteRequest) returns(RequestVoteResponse);
}

message Entry {
  uint32 term = 1;
  keyval.Record record = 2;
}

message AppendEntriesRequest {
  uint32 term = 1;
  string leaderId = 2;
  uint32 prevLogIndex = 3;
  uint32 prevLogTerm = 4;
  repeated Entry entries  = 5;
  uint32 leaderCommit = 6;
};

message AppendEntriesResponse {
  uint32 term = 1;
  bool success = 2;
};

message RequestVoteRequest {
  uint32 term = 1;
  string candidateId = 2;
  uint32 lastLogIndex = 3;
  uint32 lastLogTerm = 4;
};

message RequestVoteResponse {
  uint32 term = 1;
  bool voteGranted = 2;
}
